--- a/PlaygroundAndroidCompose/app/src/main/AndroidManifest.xml
+++ b/PlaygroundAndroidCompose/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PlaygroundAndroidCompose">
+
+        </activity>
+
+        <activity android:name=".list.ListaPaisagemActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
