--- a/PlaygroundAndroidCompose/app/src/main/AndroidManifest.xml
+++ b/PlaygroundAndroidCompose/app/src/main/AndroidManifest.xml
@@ -16,25 +16,27 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-<<<<<<< HEAD
             android:theme="@style/Theme.PlaygroundAndroidCompose">
 
         </activity>
         <activity android:name=".ApresentacaoUsuarioActivity"
-=======
-            android:theme="@style/Theme.PlaygroundAndroidCompose"></activity>
-        <activity
-            android:name=".ApresentacaoUsuarioActivity"
-            android:exported="true"></activity>
+            android:theme="@style/Theme.PlaygroundAndroidCompose">
+
+        </activity>
         <activity
             android:name=".JogarDadosActivity"
->>>>>>> 362993f2736c98443e09719c7000eca046265849
             android:exported="true">
+
+        </activity>
+        <activity android:name=".ui.theme.CalculadoraActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
     </application>
